--- a/Canvas-2D-Game/index.html
+++ b/Canvas-2D-Game/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Demo</title>
+    <title>Canvas Game</title>
     <style>
-        #canvasDemo {
+        #canvasPlayground {
             margin: 10px;
             border: dashed brown 2px;
         }
@@ -17,7 +17,7 @@
 
 <body>
     <h1>Canvas 2D Game</h1>
-    <canvas width="500" height="500" id="canvasDemo">
+    <canvas width="450" height="500" id="canvasPlayground">
     </canvas>
 </body>
 
